fix horizontal scroll

--- a/styles/style.css
+++ b/styles/style.css
@@ -758,6 +758,7 @@ footer {
   display: flex;
   align-items: center;
   overflow: hidden;
+  position: relative;
 }
 
 .marquee,
